@@ -1,3 +1,13 @@
+2004-12-22  David Harrison  <harrison@apple.com>
+
+        Reviewed by Darin Adler.
+
+        * khtml/editing/selection.cpp:
+        (khtml::Selection::validate):
+        The selecting/deselecting bad behavior is because the Selection code that expands by words
+        had an inaccurate test for being at the end of the document (where double-clicking needs
+        to select the last word).  Fixed that check.
+
 2004-12-22  Adele Amchan  <adele@apple.com>
 
         Reviewed by Chris.
